--- a/FinalWebApp/FinalWebApp/appsettings.json
+++ b/FinalWebApp/FinalWebApp/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyContext": "Server=(localdb)\\mssqllocaldb;Database=MyHotelsAndOrdersDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
