Revert "Shimeis branche"

--- a/FinalWebApp/FinalWebApp/appsettings.json
+++ b/FinalWebApp/FinalWebApp/appsettings.json
@@ -4,8 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "MyContext": "Server=(localdb)\\mssqllocaldb;Database=MyHotelsAndOrdersDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
