--- a/FinalWebApp/FinalWebApp/FinalWebApp.csproj
+++ b/FinalWebApp/FinalWebApp/FinalWebApp.csproj
@@ -18,4 +18,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\_ViewFeatures.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
