Implement PredictionEngine class, Add TextLoader, MLContext, ITransformer, IDataView. Functions:  Init, Train, Evaluate, TestSinglePrediction, SaveModelAsFile,

--- a/FinalWebApp/FinalWebApp/FinalWebApp.csproj
+++ b/FinalWebApp/FinalWebApp/FinalWebApp.csproj
@@ -32,4 +32,25 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestData.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData1.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData1.csv.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TrainingData.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TrainingData1.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TrainingData1.csv.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
